project/stage/tests/accept/empty_functions/w_params/single_param/char_func_char_param.ul
char f12345098_234fXx_ (char aslk_234_KD ) { }
