project/stage/tests/reject/bad_statements/bad_if_else/else_after_while.ul
void main() {
    while (1) {

    } else {}
